--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,22 +1,23 @@
 repos:
-- hooks:
-  - id: black
-    files: '.*\.py'
-    language_version: python3
-  repo: https://github.com/ambv/black
-  rev: 19.10b0
--   repo: https://github.com/asottile/seed-isort-config
-    rev: v2.1.1
+  - hooks:
+      - id: black
+        language_version: python3
+    repo: https://github.com/ambv/black
+    rev: 19.10b0
+  - hooks:
+      - id: isort
+        language_version: python3
+    repo: https://github.com/timothycrosley/isort
+    rev: 5.4.2
+  - hooks:
+      - id: flake8
+        language_version: python3
+    repo: https://gitlab.com/pycqa/flake8
+    rev: 3.8.3
+  - repo: local
     hooks:
-    -   id: seed-isort-config
-- hooks:
-  - id: isort
-    language_version: python3
-  repo: https://github.com/timothycrosley/isort
-  rev: 4.3.21
-- hooks:
-  - id: flake8
-    files: '.*\.py'
-    language_version: python3
-  repo: https://gitlab.com/pycqa/flake8
-  rev: 3.7.9
+    - id: pylint
+      name: pylint
+      entry: pylint
+      language: system
+      types: [python]
