--- a/setup.cfg
+++ b/setup.cfg
@@ -16,3 +16,10 @@ profile=black
 known_first_party=dvc,tests
 known_third_party=setuptools,tensorflow
 line_length=79
+
+[mypy]
+show_column_numbers = True
+show_error_codes = True
+show_error_context = True
+show_traceback = True
+pretty = True
