--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -25,8 +25,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-18.04]
-        pyv: ["3.7"]
+        os: [ubuntu-18.04, windows-2019, macos-10.15]
+        pyv: ["3.7", "3.8", "3.9"]
     steps:
     - uses: actions/checkout@v2.3.2
     - name: set up python
@@ -37,6 +37,10 @@ jobs:
       run: |
         pip install wheel
         pip install -e ".[tests]"
+    - name: install libomp
+      # required for xgboost
+      if: runner.os == 'macOS'
+      run: brew install libomp
     - name: run tests
       run: py.test --cov dvclive --cov-report=xml
     - name: upload coverage report
