--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,5 +1,5 @@
 # Config for https://github.com/apps/release-drafter
-name-template: "$RESOLVED_VERSION 🦉 "
+name-template: "$RESOLVED_VERSION 📈"
 tag-template: "$RESOLVED_VERSION"
 categories:
   - title: "🚀 New Features and Enhancements "
