--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,6 @@
+ci:
+  skip: [pylint]
+
 repos:
   - hooks:
       - id: black
@@ -14,7 +17,10 @@ repos:
         language_version: python3
     repo: https://gitlab.com/pycqa/flake8
     rev: 3.8.3
-  - hooks:
-      - id: pylint
-    repo: https://github.com/pycqa/pylint
-    rev: pylint-2.6.0
+  - repo: local
+    hooks:
+    - id: pylint
+      name: pylint
+      entry: pylint
+      language: system
+      types: [python]
