--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -37,11 +37,7 @@ jobs:
       with:
         python-version: ${{ matrix.pyv }}
     - name: install
-      run: |
-        pip install wheel
-        # https://github.com/PyTorchLightning/metrics/issues/770
-        pip install torchmetrics < 0.7.0
-        pip install ".[tests]" --use-deprecated=legacy-resolver
+      run: pip install wheel "torchmetrics<0.7.0" ".[tests]" --use-deprecated=legacy-resolver
     - name: install libomp
       # required for xgboost
       if: runner.os == 'macOS'
