--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -42,9 +42,7 @@ jobs:
       # required for xgboost
       if: runner.os == 'macOS'
       run: |
-        wget https://raw.githubusercontent.com/Homebrew/homebrew-core/679923b4eb48a8dc7ecc1f05d06063cd79b3fc00/Formula/libomp.rb -O $(find $(brew --repository) -name libomp.rb)
-        brew install ninja libomp
-        brew pin libomp        
+        brew install libomp
     - name: run tests
       run: py.test -v --cov dvclive --cov-report=xml
     - name: upload coverage report
