--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -32,19 +32,18 @@ jobs:
         pyv: ["3.7", "3.8", "3.9"]
     steps:
     - uses: actions/checkout@v2.3.2
-    - name: set up python
-      uses: actions/setup-python@v2.1.4
+    - uses: conda-incubator/setup-miniconda@v2
       with:
+        auto-update-conda: true
         python-version: ${{ matrix.pyv }}
     - name: install
-      run: pip install wheel "torchmetrics<0.7.0" ".[tests]" --use-deprecated=legacy-resolver
+      run: pip install ".[tests]" --use-deprecated=legacy-resolver
     - name: install libomp
       # required for xgboost
       if: runner.os == 'macOS'
-      run: |
-        brew install libomp
+      run: conda install libomp -c conda-forge
     - name: run tests
-      run: py.test -v --cov dvclive --cov-report=xml
+      run: pytest -v --cov dvclive --cov-report=xml
     - name: upload coverage report
       uses: codecov/codecov-action@v1.0.13
       with:
