--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -18,9 +18,7 @@ jobs:
       with:
         python-version: 3.8
     - name: install requirements
-      run: pip install ".[tests]" collective.checkdocs --use-deprecated=legacy-resolver
-    - name: Check README
-      run: python setup.py checkdocs
+      run: pip install ".[tests]"
     - name: check formatting
       run: pre-commit run --all-files
   tests:
