--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -33,6 +33,7 @@ jobs:
     - uses: conda-incubator/setup-miniconda@v2
       with:
         auto-update-conda: true
+        auto-activate-base: true
         python-version: ${{ matrix.pyv }}
     - name: install
       run: pip install ".[tests]"
