--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -30,6 +30,9 @@ jobs:
       matrix:
         os: [ubuntu-18.04, windows-2019, macos-10.15]
         pyv: ["3.7", "3.8", "3.9"]
+        include:
+        - os: ubuntu-latest
+          pyv: "pypy3.8"
     steps:
     - uses: actions/checkout@v2.3.2
     - name: set up python
@@ -44,7 +47,7 @@ jobs:
       run: |
         wget https://raw.githubusercontent.com/Homebrew/homebrew-core/679923b4eb48a8dc7ecc1f05d06063cd79b3fc00/Formula/libomp.rb -O $(find $(brew --repository) -name libomp.rb)
         brew install ninja libomp
-        brew pin libomp        
+        brew pin libomp
     - name: run tests
       run: py.test -v --cov dvclive --cov-report=xml
     - name: upload coverage report
