--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,7 @@ package_dir=
 packages = find:
 install_requires=
     dvc_render[table]>=0.0.8
+    ruamel.yaml>=0.17.11
 
 [options.extras_require]
 tests =
