setup.cfg: set authors to Iterative
Co-authored-by: skshetry <suagatchhetri@outlook.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,9 +10,7 @@ project_urls =
     Documentation = https://dvc.org/doc/dvclive
     Source = https://github.com/iterative/dvclive
 platforms=any
-authors = Paweł Redzyński
-author_email = pawel@iterative.ai
-maintainer = Iterative
+authors = Iterative
 maintainer_email = support@dvc.org
 keywords=data-science, metrics, machine-learning, developer-tools, ai
 classifiers =
