--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,7 +2,7 @@ default_language_version:
   python: python3
 repos:
   - repo: https://github.com/psf/black
-    rev: 22.6.0
+    rev: 22.8.0
     hooks:
       - id: black
   - repo: https://github.com/pre-commit/pre-commit-hooks
@@ -40,6 +40,7 @@ repos:
     hooks:
       - id: flake8
         additional_dependencies:
+          - flake8-bandit==4.1.1
           - flake8-broken-line==0.5.0
           - flake8-bugbear==22.8.23
           - flake8-comprehensions==3.10.0
