--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,7 +21,17 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-20.04, windows-latest, macos-latest]
-        pyv: ["3.8", "3.9", "3.10.6"]
+        pyv: ["3.8", "3.9"]
+        include:
+        - os: ubuntu-20.04
+          pyv: 3.10.6
+          nox_pyv: 3.10
+        - os: windows-latest
+          pyv: 3.10.6
+          nox_pyv: 3.10
+        - os: macos-latest
+          pyv: 3.10.6
+          nox_pyv: 3.10
 
     steps:
       - name: Check out the repository
