Update catalyst integrationn for `>22`.
Closes https://github.com/iterative/dvclive/issues/219

--- a/setup.cfg
+++ b/setup.cfg
@@ -61,7 +61,7 @@ huggingface =
     transformers
     datasets
 catalyst =
-    catalyst<=21.12
+    catalyst>22
 fastai =
     fastai
 pytorch_lightning =
