--- a/setup.cfg
+++ b/setup.cfg
@@ -40,9 +40,11 @@ tests =
     pylint==2.15.0
     pylint-plugin-utils>=0.6
     mypy==0.981
+    types-requests
+# using `tensorflow-cpu` for faster dev installation and CI runs.
 dev =
     %(tests)s
-    %(all)s
+    %(all_tf_cpu)s
 image =
     pillow
 sklearn =
@@ -53,6 +55,8 @@ mmcv =
     mmcv
 tf =
     tensorflow
+tf_cpu =
+    tensorflow-cpu
 xgb =
     xgboost
 lgbm =
@@ -66,10 +70,9 @@ fastai =
     fastai
 pytorch_lightning =
     pytorch_lightning>=1.7
-all =
+all_no_tf =
     %(image)s
     %(mmcv)s
-    %(tf)s
     %(xgb)s
     %(lgbm)s
     %(huggingface)s
@@ -79,6 +82,12 @@ all =
     %(plots)s
     dvc>=2.0.0
     pandas>=1.3.1
+all =
+    %(all_no_tf)s
+    %(tf)s
+all_tf_cpu =
+    %(all_no_tf)s
+    %(tf_cpu)s
 
 [options.packages.find]
 exclude =
