--- a/setup.cfg
+++ b/setup.cfg
@@ -67,6 +67,8 @@ fastai =
 pytorch_lightning =
     pytorch_lightning>=1.7
     torch<1.13
+optuna =
+    optuna
 all =
     %(image)s
     %(mmcv)s
@@ -77,6 +79,7 @@ all =
     %(catalyst)s
     %(fastai)s
     %(pytorch_lightning)s
+    %(optuna)s
     %(plots)s
     dvc>=2.0.0
     pandas>=1.3.1
