--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,6 +33,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.pyv }}
+          cache: 'pip'
 
       - name: Upgrade pip and nox
         run: |
