Set cache-dependency-path: setup.cfg

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,6 +34,7 @@ jobs:
         with:
           python-version: ${{ matrix.pyv }}
           cache: 'pip'
+          cache-dependency-path: setup.cfg
 
       - name: Upgrade pip and nox
         run: |
