--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,17 @@ install_requires=
     ruamel.yaml>=0.17.11
 
 [options.extras_require]
+dvc =
+    dvc>=2.37.0
+image =
+    numpy
+    pillow
+sklearn =
+    scikit-learn
+plots =
+    %(sklearn)s
+markdown =
+    matplotlib
 tests =
     pytest==7.2.0
     pytest-sugar==0.9.5
@@ -40,15 +51,13 @@ tests =
     pylint==2.15.0
     pylint-plugin-utils>=0.6
     mypy==0.981
+    %(image)s
+    %(plots)s
+    %(dvc)s
+    %(markdown)s
 dev =
     %(tests)s
     %(all)s
-image =
-    pillow
-sklearn =
-    scikit-learn
-plots =
-    %(sklearn)s
 mmcv =
     mmcv
 tf =
