--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,14 +22,16 @@ jobs:
       with:
         python-version: '3.10'
 
-    - name: Upgrade pip and nox
+    - name: Upgrade pip
       run: |
-        pip install --upgrade pip nox
+        pip install --upgrade pip
         pip --version
-        nox --version
+
+    - name: Install
+      run: python -m pip install build setuptools
 
     - name: Build package
-      run: nox -s build
+      run: python -m build
 
     - name: Upload package
       if: github.event_name == 'release'
