--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,7 +14,57 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  tests:
+  test_full:
+    timeout-minutes: 30
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Check out the repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.8'
+          cache: 'pip'
+          cache-dependency-path: setup.cfg
+
+      - name: Upgrade pip
+        run: |
+          python -m pip install --upgrade pip wheel
+          pip --version
+
+      - run: python -m pip install pre-commit
+
+      - uses: actions/cache@v3
+        with:
+          path: ~/.cache/pre-commit/
+          key: pre-commit-4|${{ env.pythonLocation }}|${{ hashFiles('.pre-commit-config.yaml') }}
+
+      - name: pre-commit
+        run: |
+          pre-commit run --show-diff-on-failure --color=always --all-files
+
+      - name: Full install
+        run: pip install -e '.[dev]'
+
+      - name: pylint
+        run: |
+           python -m pylint src tests
+
+      - name: mypy
+        run: |
+           python -m mypy --install-types --non-interactive
+
+      - name: Run tests
+        run: pytest -v tests --cov --cov-report=xml --cov-config=pyproject.toml
+
+      - name: Upload coverage report
+        uses: codecov/codecov-action@v3.1.1
+
+  test_core:
     timeout-minutes: 30
     runs-on: ${{ matrix.os }}
     strategy:
@@ -33,28 +83,17 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.pyv }}
+          cache: 'pip'
+          cache-dependency-path: setup.cfg
 
-      - name: Upgrade pip and nox
+      - name: Upgrade pip
         run: |
-          python -m pip install --upgrade pip nox
+          python -m pip install --upgrade pip wheel
           pip --version
-          nox --version
 
-      - name: install libomp
-        # required for xgboost
-        if: runner.os == 'macOS'
+      - name: Install core
         run: |
-          wget https://raw.githubusercontent.com/Homebrew/homebrew-core/679923b4eb48a8dc7ecc1f05d06063cd79b3fc00/Formula/libomp.rb -O $(find $(brew --repository) -name libomp.rb)
-          brew install ninja libomp
-          brew pin libomp
-      - name: Lint code and check dependencies
-        run: nox -s lint safety
+          pip install -e '.[tests]'
 
       - name: Run tests
-        run: nox -s tests-${{ matrix.nox_pyv || matrix.pyv }} -- --cov-report=xml
-
-      - name: Upload coverage report
-        uses: codecov/codecov-action@v3.1.1
-
-      - name: Build package
-        run: nox -s build
+        run: pytest -v tests --ignore=tests/test_frameworks
