--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,7 @@ install_requires=
 [options.extras_require]
 dvc =
     dvc>=2.37.0
+    dvc-studio-client>=0.2.0
 image =
     numpy
     pillow
@@ -87,8 +88,10 @@ all =
     %(fastai)s
     %(pytorch_lightning)s
     %(plots)s
-    dvc>=2.0.0
-    pandas>=1.3.1
+    %(image)s
+    %(plots)s
+    %(dvc)s
+    %(markdown)s
 
 [options.packages.find]
 exclude =
