--- a/setup.cfg
+++ b/setup.cfg
@@ -101,15 +101,23 @@ where=src
 
 [flake8]
 ignore=
-    E203, # Whitespace before ':'
-    E266, # Too many leading '#' for block comment
-    W503, # Line break occurred before a binary operator
-    P1,  # unindexed parameters in the str.format, see:
+    # Whitespace before ':'
+    E203
+    # Too many leading '#' for block comment
+    E266
+    # Line break occurred before a binary operator
+    W503
+    # unindexed parameters in the str.format, see:
     # https://pypi.org/project/flake8-string-format/
+<<<<<<<
 per-file-ignores =
      tests/test_mmcv.py:C408,
      # Unnecessary dict call
 max_line_length = 79
+=======
+    P1
+max_line_length = 88
+>>>>>>>
 max-complexity = 15
 select = B,C,E,F,W,T4,B902,T,P
 show_source = true
