add fabric dep to lightning

--- a/setup.cfg
+++ b/setup.cfg
@@ -76,6 +76,7 @@ fastai =
     fastai
 pytorch_lightning =
     pytorch_lightning>=1.9
+    lightning_fabric>=1.9
     torch<1.13
 all =
     %(image)s
