--- a/setup.cfg
+++ b/setup.cfg
@@ -28,13 +28,9 @@ package_dir=
     =src
 packages = find:
 install_requires=
-    dvc_render[table]>=0.1.2
-    ruamel.yaml>=0.17.11
-    dvc-studio-client>=0.4.0
+    dvc>2.45.1
 
 [options.extras_require]
-dvc =
-    dvc>=2.45.0
 image =
     numpy
     pillow
@@ -54,7 +50,6 @@ tests =
     mypy==0.981
     %(image)s
     %(plots)s
-    %(dvc)s
     %(markdown)s
     ipython
 dev =
@@ -91,7 +86,6 @@ all =
     %(plots)s
     %(image)s
     %(plots)s
-    %(dvc)s
     %(markdown)s
 
 [options.packages.find]
