--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,8 @@ package_dir=
 packages = find:
 install_requires=
     dvc>2.45.1
+    funcy>=1.14
+    ruamel.yaml>=0.17.11
 
 [options.extras_require]
 image =
