--- a/setup.cfg
+++ b/setup.cfg
@@ -48,7 +48,7 @@ tests =
     pytest-mock==3.8.2
     pylint==2.15.0
     pylint-plugin-utils>=0.6
-    mypy==0.981
+    mypy>=1.1.1
     %(image)s
     %(plots)s
     %(markdown)s
@@ -74,6 +74,8 @@ fastai =
 pytorch_lightning =
     pytorch_lightning>=1.9
     torch<1.13
+optuna =
+    optuna
 all =
     %(image)s
     %(mmcv)s
@@ -84,6 +86,7 @@ all =
     %(catalyst)s
     %(fastai)s
     %(pytorch_lightning)s
+    %(optuna)s
     %(plots)s
     %(image)s
     %(plots)s
