--- a/pyproject.toml
+++ b/pyproject.toml
@@ -65,29 +65,15 @@ ignore_missing_imports = true
 files = ["src", "tests"]
 enable_recursive_aliases = true
 
-[tool.pylint.format]
-max-line-length = 88
-
-[tool.pylint.message_control]
-enable = ["c-extension-no-member", "no-else-return"]
-disable = [
-    "format", "refactoring", "spelling", "design",
-    "invalid-name", "duplicate-code", "fixme",
-    "unused-wildcard-import", "cyclic-import", "wrong-import-order",
-    "wrong-import-position", "ungrouped-imports", "multiple-imports",
-    "logging-format-interpolation", "logging-fstring-interpolation",
-    "missing-function-docstring", "missing-module-docstring",
-    "missing-class-docstring", "raise-missing-from", "import-outside-toplevel",
-]
-
-[tool.pylint.variables]
-dummy-variables-rgx = "_+$|(_[a-zA-Z0-9_]*[a-zA-Z0-9]+?$)|dummy|^ignored_|^unused_"
-ignored-argument-names = "_.*|^ignored_|^unused_|args|kwargs"
-generated-members = ["torch.*"]
-
 [tool.codespell]
 ignore-words-list = "fpr"
 
-[tool.bandit]
-exclude_dirs = ["tests"]
-skips = ["B101"]
+[tool.ruff]
+ignore = ["N818", "UP006", "UP007", "UP035", "UP038", "B905", "PGH003"]
+select = ["F", "E", "W", "C90", "N", "UP", "YTT", "S", "BLE", "B", "A", "C4", "T10", "EXE", "ISC", "INP", "PIE", "T20", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "INT", "ARG", "PGH", "PL", "TRY", "NPY", "RUF"]
+
+[tool.ruff.per-file-ignores]
+"tests/*" = ["S101", "INP001", "SLF001", "ARG001", "ARG002", "ARG005", "PLR2004", "NPY002"]
+
+[tool.ruff.pylint]
+max-args = 10
