--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 description = Metric logger for ML projects.
 name = dvclive
-long_description = file: README.rst
+long_description = file: README.md
 long_description_content_type = text/x-rst
 license = Apache-2.0
 license_files = LICENSE
