--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 description = Metric logger for ML projects.
 name = dvclive
 long_description = file: README.md
-long_description_content_type = text/x-rst
+long_description_content_type = text/markdown
 license = Apache-2.0
 license_files = LICENSE
 url = https://github.com/iterative/dvclive
