--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,7 @@ install_requires=
     dvc-studio-client>=0.7.0,<1
     funcy
     ruamel.yaml
+    scmrepo
 [options.extras_require]
 image =
     numpy
