--- a/setup.cfg
+++ b/setup.cfg
@@ -44,10 +44,10 @@ plots =
 markdown =
     matplotlib
 tests =
-    pytest==7.2.0
-    pytest-sugar==0.9.5
-    pytest-cov==3.0.0
-    pytest-mock==3.8.2
+    pytest>=7.2.0,<8.0
+    pytest-sugar>=0.9.6,<1.0
+    pytest-cov>=3.0.0,<4.0
+    pytest-mock>=3.8.2,<4.0
     %(image)s
     %(plots)s
     %(markdown)s
