--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,7 @@ package_dir=
 packages = find:
 install_requires=
     dvc>2.45.1
+    dvc-render>=0.5.0,<1.0
     dvc-studio-client>=0.7.0,<1
     funcy
     ruamel.yaml
