--- a/setup.cfg
+++ b/setup.cfg
@@ -28,7 +28,7 @@ package_dir=
     =src
 packages = find:
 install_requires=
-    dvc>2.45.1
+    dvc>=2.58.0
     dvc-render>=0.5.0,<1.0
     dvc-studio-client>=0.9.2,<1
     funcy
