--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ classifiers = [
 ]
 dynamic = ["version"]
 dependencies = [
-    "dvc>=2.58.0,<3",
+    "dvc>=2.58.0",
     "dvc-render>=0.5.0,<1.0",
     "dvc-studio-client>=0.10.0,<1",
     "funcy",
