--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,8 +62,7 @@ lgbm = ["lightgbm"]
 huggingface = ["transformers", "datasets"]
 catalyst = ["catalyst>22"]
 fastai = ["fastai"]
-pytorch_lightning = ["pytorch-lightning>=1.9", "torch<2.1"] # for backward compatibility
-lightning = ["lightning>=1.9", "torch<2.1"]
+lightning = ["lightning>=2.0", "torch"]
 optuna = ["optuna"]
 all = [
    "dvclive[image,mmcv,tf,xgb,lgbm,huggingface,catalyst,fastai,pytorch-lightning,optuna,plots,markdown]"
