Update test per https://github.com/scikit-learn/scikit-learn/pull/26194

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ dependencies = [
 [project.optional-dependencies]
 image = ["numpy", "pillow"]
 sklearn = ["scikit-learn"]
-plots = ["dvclive[sklearn]"]
+plots = ["scikit-learn"]
 markdown = ["matplotlib"]
 tests = [
     "pytest>=7.2.0,<8.0",
