--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ classifiers = [
 ]
 dynamic = ["version"]
 dependencies = [
-    "dvc>=3.22.0",
+    "dvc>3.22.1",
     "dvc-render>=0.6.0,<1.0",
     "dvc-studio-client>=0.15.0,<1",
     "funcy",
