--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,10 +31,11 @@ classifiers = [
 ]
 dynamic = ["version"]
 dependencies = [
-    "dvc>=3.22.0",
+    "dvc>=3.22.1",
     "dvc-render>=0.6.0,<1.0",
     "dvc-studio-client>=0.15.0,<1",
     "funcy",
+    "gto",
     "ruamel.yaml",
     "scmrepo",
 ]
