--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,6 +28,10 @@ repos:
     hooks:
       - id: codespell
         additional_dependencies: ["tomli"]
+        exclude: >
+            (?x)^(
+                .*\.ipynb
+            )$
   - repo: https://github.com/PyCQA/isort
     rev: 5.12.0
     hooks:
