--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,8 @@ tests = [
 ]
 dev = [
     "dvclive[all,tests]",
-    "mypy>=1.1.1"
+    "mypy>=1.1.1",
+    "types-PyYAML",
 ]
 mmcv = ["mmcv"]
 tf = ["tensorflow"]
