adds hf accelerate tracker

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,7 +61,7 @@ mmcv = ["mmcv"]
 tf = ["tensorflow"]
 xgb = ["xgboost"]
 lgbm = ["lightgbm"]
-huggingface = ["transformers", "datasets"]
+huggingface = ["transformers", "datasets", "accelerate"]
 catalyst = ["catalyst>22"]
 fastai = ["fastai"]
 lightning = ["lightning>=2.0", "torch"]
