--- a/pyproject.toml
+++ b/pyproject.toml
@@ -130,7 +130,6 @@ warn_redundant_casts = true
 warn_unreachable = true
 ignore_missing_imports = true
 files = ["src", "tests"]
-enable_recursive_aliases = true
 
 [tool.codespell]
 ignore-words-list = "fpr"
@@ -140,6 +139,7 @@ ignore = ["N818", "UP006", "UP007", "UP035", "UP038", "B905", "PGH003"]
 select = ["F", "E", "W", "C90", "N", "UP", "YTT", "S", "BLE", "B", "A", "C4", "T10", "EXE", "ISC", "INP", "PIE", "T20", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "INT", "ARG", "PGH", "PL", "TRY", "NPY", "RUF"]
 
 [tool.ruff.per-file-ignores]
+"noxfile.py" = ["D", "PTH"]
 "tests/*" = ["S101", "INP001", "SLF001", "ARG001", "ARG002", "ARG005", "PLR2004", "NPY002"]
 
 [tool.ruff.pylint]
