--- a/.gitignore
+++ b/.gitignore
@@ -137,6 +137,10 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
+# Editors
+.idea
+.vscode
+
 .dvc/
 .dvcignore
 src/dvclive/_dvclive_version.py
