--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.8'
-          cache: 'pip'
+          python-version: "3.9"
+          cache: "pip"
           cache-dependency-path: setup.cfg
 
       - name: Upgrade pip
@@ -52,7 +52,7 @@ jobs:
 
       - name: mypy
         run: |
-           python -m mypy
+          python -m mypy
 
       - name: Run tests
         run: pytest -v tests --cov --cov-report=xml --cov-config=pyproject.toml
@@ -67,7 +67,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-20.04, windows-latest, macos-latest]
-        pyv: ["3.8", "3.9", "3.10"]
+        pyv: ["3.9", "3.10", "3.11", "3.12"]
 
     steps:
       - name: Check out the repository
@@ -79,7 +79,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.pyv }}
-          cache: 'pip'
+          cache: "pip"
           cache-dependency-path: setup.cfg
 
       - name: Upgrade pip
