--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -25,12 +25,19 @@ repos:
       - id: codespell
         additional_dependencies: ["tomli"]
         exclude: >
-            (?x)^(
-                .*\.ipynb
-            )$
+          (?x)^(
+              .*\.ipynb
+          )$
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: "v0.1.8"
+    rev: v0.1.8
     hooks:
       - id: ruff
         args: [--fix, --exit-non-zero-on-fix]
       - id: ruff-format
+  - repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
+    rev: v2.12.0
+    hooks:
+      - id: pretty-format-toml
+        args: [--autofix, --no-sort]
+      - id: pretty-format-yaml
+        args: [--autofix, --indent, '2', '--offset', '2', --preserve-quotes]
