--- a/pyproject.toml
+++ b/pyproject.toml
@@ -138,13 +138,13 @@ files = ["src", "tests"]
 [tool.codespell]
 ignore-words-list = "fpr"
 
-[tool.ruff]
+[tool.ruff.lint]
 ignore = ["N818", "UP006", "UP007", "UP035", "UP038", "B905", "PGH003"]
 select = ["F", "E", "W", "C90", "N", "UP", "YTT", "S", "BLE", "B", "A", "C4", "T10", "EXE", "ISC", "INP", "PIE", "T20", "PT", "Q", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "INT", "ARG", "PGH", "PL", "TRY", "NPY", "RUF"]
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "noxfile.py" = ["D", "PTH"]
 "tests/*" = ["S101", "INP001", "SLF001", "ARG001", "ARG002", "ARG005", "PLR2004", "NPY002"]
 
-[tool.ruff.pylint]
+[tool.ruff.lint.pylint]
 max-args = 10
